<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_header_dashboard_morning" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/text_welcome"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_header"
            app:layout_constraintVertical_bias="0.431" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_rounded_menu"
            android:padding="@dimen/padding_menu_container"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/iv_header">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_horizontal_menu"
                    android:layout_marginEnd="@dimen/margin_horizontal_menu"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_icon_menu_doa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_horizontal_menu"
                        android:layout_marginEnd="@dimen/margin_horizontal_menu"
                        app:srcCompat="@drawable/ic_menu_doa" />

                    <TextView
                        android:id="@+id/tv_menu_doa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintop_textmenu"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/text_menu_doa"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_horizontal_menu"
                    android:layout_marginEnd="@dimen/margin_horizontal_menu"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_icon_menu_dzikir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_horizontal_menu"
                        android:layout_marginEnd="@dimen/margin_horizontal_menu"
                        app:srcCompat="@drawable/ic_menu_dzikir" />

                    <TextView
                        android:id="@+id/tv_menu_dzikir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintop_textmenu"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/text_menu_dzikir"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_horizontal_menu"
                    android:layout_marginEnd="@dimen/margin_horizontal_menu"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_icon_menu_zakat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_horizontal_menu"
                        android:layout_marginEnd="@dimen/margin_horizontal_menu"
                        app:srcCompat="@drawable/ic_menu_zakat" />

                    <TextView
                        android:id="@+id/tv_menu_dzakat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintop_textmenu"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/text_menu_zakat"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_horizontal_menu"
                    android:layout_marginEnd="@dimen/margin_horizontal_menu"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_icon_menu_jadwal_sholat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_horizontal_menu"
                        android:layout_marginEnd="@dimen/margin_horizontal_menu"
                        app:srcCompat="@drawable/ic_menu_jadwal_sholat" />

                    <TextView
                        android:id="@+id/tv_menu_jadwal_sholat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintop_textmenu"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/text_menu_sholat"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_horizontal_menu"
                    android:layout_marginEnd="@dimen/margin_horizontal_menu"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_icon_menu_video_kajian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_horizontal_menu"
                        android:layout_marginEnd="@dimen/margin_horizontal_menu"
                        app:srcCompat="@drawable/ic_menu_video_kajian" />

                    <TextView
                        android:id="@+id/tv_menu_video_kajian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintop_textmenu"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/text_menu_kajian"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/inspiration"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_inspiration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:listitem="@layout/item_inspiration" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>